cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj2_TupleStruct_1.plcfunc
FUNCTION proj2_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj2_TupleStruct_1 := tuple.field2;
END_FUNCTION
